--- a/Index.html
+++ b/Index.html
@@ -7,6 +7,8 @@
     <title>Index</title>
     <link rel="stylesheet" href="footer.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="js/jquery.min.js">
+    <link rel="stylesheet" href="js/all.min.js">
     <link href="Font/css/font-awesome.min.css" rel="stylesheet" />
     <link href="Font/css/all.min.css" rel="stylesheet" />
 
@@ -443,7 +445,24 @@
                 </div>
 
             </div>
-
+            <div class="right box">
+                <h2>Email Us</h2>
+                <div class="content">
+                    <form action="#">
+                        <div class="email">
+                            <div class="text">Email</div>
+                            <input type="email" require>
+                        </div>
+                        <div class="msg">
+                            <div class="text">Message</div>
+                            <textarea rows="2" cols="25" required></textarea>
+                        </div>
+                        <div class="btn">
+                            <button type="submit">Send</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
         </div>
     </footer>
     <!-- end of footer -->
